--- a/yaml/nfs-server.yml
+++ b/yaml/nfs-server.yml
@@ -45,7 +45,7 @@ spec:
         - "5"
         - "6"
         - "7"
-        image: ""
+        image: "gcr.io/google_containers/volume-nfs:0.8"
         ports:
           - name: nfs
             containerPort: 2049
